syntax = "proto3";

option go_package="github.com/pydio/cells/common/proto/ctl";

package ctl;

enum ServiceStatus{
    ANY = 0;
    STOPPED = 1;
    STARTING = 2;
    STOPPING = 3;
    STARTED = 4;
}

message Peer {
    string Id = 1;
    string Address = 2;
    int32 Port = 3;
    map<string,string> Metadata = 4;
}

message Service{
    string Name = 1;
    string Version = 2;
    string Description = 3;
    string Tag = 4;
    bool Controllable = 5;

    ServiceStatus Status = 7;
    repeated Peer RunningPeers = 6;

    map<string,string> Metadata = 8;
}

enum ServiceCommand{
    START = 0;
    STOP = 1;
}

message ServiceStatusEvent{
    string SourceNode = 1;
    string ServiceName = 2;
    ServiceStatus Status = 3;
}

